# git-multi-exec

./: .pre-commit-config.yaml  README.md  pyproject.toml
git_multi_exec/: azure_devops.py  bitbucket.py  cli.py  github.py  gitlab.py  util.py
